# ApplicationAwareResourceManagement

./: CMakeLists.txt  README.md  build.sh  rscmngConfig.cmake.in
config/: demonstrator_configuration.json  demonstrator_configuration_experiment_0.json  demonstrator_configuration_experiment_1.json  demonstrator_configuration_experiment_2a.json  demonstrator_configuration_experiment_2b.json  demonstrator_configuration_experiment_2c.json  demonstrator_configuration_experiment_3.json  demonstrator_configuration_experiment_4.json  demonstrator_configuration_experiment_5.json  demonstrator_configuration_experiment_6.json  demonstrator_configuration_experiment_7.json
examples/wired_basic/: wired_rm.cpp  wired_rm_client_endnode.cpp  wired_rm_client_switch.cpp
include/rscmng/: messages.hpp  rm_abstraction.hpp  rm_communication.hpp  traffic_generator.hpp  traffic_sink_statistic.hpp
include/rscmng/abstraction/: socket_endpoint.hpp
include/rscmng/attributes/: demonstrator_config.hpp  uuid.hpp
include/rscmng/data_sharing/: message_net.hpp  priority_level_queue.hpp  safe_map.hpp  safe_queue.hpp
include/rscmng/protocols/: basic_payload.hpp  protocols.hpp  rm_wired_payload.hpp
include/rscmng/rm/: net_layer_rm.hpp  net_layer_rm.tpp
include/rscmng/utils/: config_reader.hpp  log.hpp  timer_events.hpp  timer_events.tpp
src/rscmng/: config_reader.cpp  log.cpp  messages.cpp  protocol_basic_payload.cpp  protocol_rm_wired_payload.cpp  rm_abstraction.cpp  rm_communication.cpp  traffic_generator.cpp  traffic_sink_statistic.cpp
